--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.21.2",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
