--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "country-state-city": "^2.0.0",
     "date-fns": "^2.21.2",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^3.7.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "sweetalert2": "^10.16.7",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
