--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
-    "antd": "^4.15.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "country-state-city": "^2.0.0",
-    "date-fns": "^2.21.2",
-    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.7.0",
@@ -28,11 +25,11 @@
     "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-step-builder": "^2.0.10",
     "react-sweet-state": "^2.5.2",
     "reactstrap": "^8.9.0",
     "sweetalert2": "^10.16.7",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.10",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
