--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.4",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-sweet-state": "^2.5.2",
